--- a/templates/index.html
+++ b/templates/index.html
@@ -283,44 +283,15 @@
                 </a>
                 <div class="collapse" id="submenu">
                   <ul class="nav nav-collapse">
+                                      
                     <li>
-                      <a data-bs-toggle="collapse" href="#subnav1">
-                        <span class="sub-item">Level 1</span>
-                        <span class="caret"></span>
+                      <a href="{% url 'aditivo_list' %}">
+                        <span class="sub-item">Listar Aditivos</span>
                       </a>
-                      <div class="collapse" id="subnav1">
-                        <ul class="nav nav-collapse subnav">
-                          <li>
-                            <a href="#">
-                              <span class="sub-item">Level 2</span>
-                            </a>
-                          </li>
-                          <li>
-                            <a href="#">
-                              <span class="sub-item">Level 2</span>
-                            </a>
-                          </li>
-                        </ul>
-                      </div>
                     </li>
                     <li>
-                      <a data-bs-toggle="collapse" href="#subnav2">
-                        <span class="sub-item">Level 1</span>
-                        <span class="caret"></span>
-                      </a>
-                      <div class="collapse" id="subnav2">
-                        <ul class="nav nav-collapse subnav">
-                          <li>
-                            <a href="#">
-                              <span class="sub-item">Level 2</span>
-                            </a>
-                          </li>
-                        </ul>
-                      </div>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <span class="sub-item">Level 1</span>
+                      <a href="{% url 'aditivo_create' %}">
+                        <span class="sub-item">Adicionar Aditivo</span>
                       </a>
                     </li>
                   </ul>
